--- a/news/templates/news/add_news.html
+++ b/news/templates/news/add_news.html
@@ -17,7 +17,41 @@
 
 <form action="{% url 'add_news' %}" method="post">
     {%csrf_token%}
+    {%comment%}
     {{form.as_p}}
+    {%endcomment%}
+
+    {{form.none_field.errors}}
+    <div class="mb-3">
+        <label for="{{ form.title.id_for_label }}" class="form-label">Название:</label>
+        {{ form.title }}
+        <div class="invalid-feedback">
+          {{ form.title.errors }}
+        </div>
+    </div>
+        <div class="mb-3">
+        <label for="{{ form.content.id_for_label }}" class="form-label">Содержание:</label>
+        {{ form.content }}
+        <div class="invalid-feedback">
+          {{ form.content.errors }}
+        </div>
+    </div>
+         <div class="mb-3">
+        <label for="{{ form.is_published.id_for_label }}" class="form-label">Опубликовано?</label>
+        {{ form.is_published }}
+        <div class="invalid-feedback">
+          {{ form.is_published.errors }}
+        </div>
+    </div>
+        <div class="mb-3">
+        <label for="{{ form.category.id_for_label }}" class="form-label">Выбрать категорию</label>
+        {{ form.category }}
+        <div class="invalid-feedback">
+          {{ form.category.errors }}
+        </div>
+    </div>
+
+
     <button type="submit" class="btn btn-primary btn-block">Добавить новость</button>
 </form>
 
